--- a/Pizzeria.ipynb
+++ b/Pizzeria.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOr7yhSG8aJRsVX/RI3H8kQ",
+      "authorship_tag": "ABX9TyMvB3dxrLMfiQMxsigALI5E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -965,6 +965,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Pizzas mas vendidas"
+      ],
+      "metadata": {
+        "id": "jGor5yvyHmyz"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "sorteado=Cantidad_Vendida.sort_values(\"Valor Pizza\", ascending=False)\n",
@@ -1166,6 +1175,15 @@
           "execution_count": 40
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Total Vendido"
+      ],
+      "metadata": {
+        "id": "fySchfzaH2vN"
+      }
     },
     {
       "cell_type": "code",
