--- a/Pizzeria.ipynb
+++ b/Pizzeria.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/RanielSosa/Pizzeria-Bella-Napoli/blob/main/Pizzeria.ipynb",
-      "authorship_tag": "ABX9TyOmH2omg/0/kKEq582Ratp3",
+      "authorship_tag": "ABX9TyN/M/HUPwEiQNjm0pgYkzed",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,7 +142,7 @@
       "metadata": {
         "id": "bc_bx56secYO"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
       "metadata": {
         "id": "AfW0QyOyvGIU"
       },
-      "execution_count": 163,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -191,7 +191,7 @@
         "id": "17l1sHawEwJm",
         "outputId": "0b1da74c-538a-4825-c863-4e95ee70e4f8"
       },
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -391,7 +391,7 @@
         "id": "kq-yYNk69PSp",
         "outputId": "6dc3e256-0c5c-4582-8ff8-580a37f3f270"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,7 +416,7 @@
           "height": 269
         }
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,6 +630,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "para poder tener un grafico que me brinde informacion y que pueda servir para facilitar la toma de desiciones, decidí ponerle fecha a las entradas y asi poder ver en un lapso de tiempo cuales pizzas son las mas vendidas en que dias y como mejorar las ventas de las pizzas menos vendidas en esos dias que estan en bajas. \n",
+        "\n",
+        "determinando el dia de menos entrada y el tipo de pizza el dueno de la pizza podria o poner especiales los dias de menor venta para mover el inventario o reducir la compra de inventario los dias donde menos se vende una pizza en especifico.\n"
+      ],
+      "metadata": {
+        "id": "xQUPzB08DEKQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -638,7 +649,7 @@
       "metadata": {
         "id": "6jc7kUth9bt4"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -655,7 +666,7 @@
           "height": 237
         }
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -832,7 +843,7 @@
           "height": 379
         }
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
